Checking VS compatibility.

--- a/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
+++ b/Tailspin.SpaceGame.Web/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <section class="intro">
     <div class="container">
         <img class="title" src="/images/space-game-title.svg" alt="Space Game">
-        <p>Checking with new YAML File without VS Code.</p>
+        <p>Does this sync with VS?</p>
     </div>
 </section>
 <section class="download">
